add sap ai api to package json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@cap-js/hana": "^1",
+    "@sap-ai-sdk/ai-api": "^1.4.0",
     "@sap/cds": ">=8.4.0",
     "@sap/xssec": "^4",
     "express": "^4"
